Removed the Build "task" and changed the way it worked.

--- a/README
+++ b/README
@@ -2,3 +2,15 @@
 This AI bot requires the following be installed,
 	libtpproto-py						- Network Library
 	libtpclient-py						- Client Support Library
+
+How this AI bot works.
+
+Step 1 - Classify each object into threat, neutral, asset
+Step 2 - Work out the tasks needed to deal with threats and assets
+
+Step 3 - Work out which assets can be do each task
+
+Step 4 - Assign assets to tasks so that the time to complete each task is
+minimized.
+
+
